Add table creation workflow for PostgreSQL migration
Introduces endpoints and service logic to generate and execute DDL statements for table creation in PostgreSQL during MSSQL to PostgreSQL migration. Adds DDLManagement and TableCreations models, updates repository and bridge classes to handle DDL objects, and refactors service and controller to support the new workflow.